<resources>
    <string name="a_castigat">The winner is</string>
    <string name="cu_punctajul">with the score</string>
    <string name="vrei_sa_continui_cu_o_partida_noua">You continue with a new match?</string>
    <string name="nu">no</string>
    <string name="da">yes</string>
    <string name="inserisc_nome_gioco">insert game\'s name</string>
    <string name="introduc_manual_puncte_castigatoare">insert manually winner points</string>
    <string name="winner_points">winner points:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="app_name">Belote Note</string>
    <string name="doi_jucator">2 Players</string>
    <string name="trei_jucatori">3 Players</string>
    <string name="patru_jucatori">4 Players</string>
    <string name="individual">Individual</string>
    <string name="in_echipa">In team</string>
    <string name="puncte_joaca">game\'s points</string>
    <string name="puncte_noi">we points</string>
    <string name="puncte_voi">you points</string>
    <string name="turno">Turn</string>
    <string name="joaca">Game</string>
    <string name="noi">We</string>
    <string name="voi">You</string>
    <string name="patru_jucatori_in_eechipa_label">4 players in team</string>
    <string name="note">Note:</string>
    <string name="note_introduce">Insert</string>
    <string name="note_pentru_a_activa_calculatorul">to activate calculator</string>
    <string name="minim">Minimum</string>
    <string name="maxim">Maximum</string>
    <string name="nu_este_egal_cu">is not equal with</string>
    <string name="del">del</string>
    <string name="meno_10">-10</string>
    <string name="bolt">B</string>
    <string name="done">done</string>
    <string name="astazi">Today</string>
    <string name="ieri">Yesterday</string>
    <string name="alaltaieri">the day before yesterday</string>
    <string name="introduce_puncte">Insert points</string>
    <string name="puncte">Points</string>
    <string name="error_game_name">the game name field must contain at least one character</string>
    <string name="error_puncte_castigatoare">invalid winner points number</string>
    <string name="error">error</string>
    <string name="inserisci">insert</string>
    <string name="main_menu_title">Main menu</string>
    <string name="home">HOME</string>
    <string name="patru_jucatori_in_echipa">4 Players in TEAM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>
    <string name="last_match_winner_points">last match winner points</string>
    <string name="avem_cel_putin">We have at least</string>
    <string name="winner_players">winner players</string>
    <string name="greater_than">greater than</string>
    <string name="games_name">Game\'s name</string>
    <string name="games_info">Game\'s info</string>
    <string name="match_finished">match finished!</string>
    <string name="playing_match">playing match</string>
    <string name="playing_prolonged_match">playing prolonged match</string>
    <string name="insert_new_match">insert new match</string>
</resources>
