<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/row"
    android:gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TableRow
            android:id="@+id/nome_gioco_global_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <!--<EditText
                android:id="@+id/nume_joc_4_jucatori_in_echipa_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/introdu_nume_partida"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:singleLine="true"
                android:textStyle="bold|italic"
                android:visibility="invisible" />-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_of_16"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/puncte_castigatoare_precedente"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_puncte_castigatoare_global"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:fadeScrollbars="true"
                android:paddingBottom="@dimen/padding_bottom_recycler_view"
                android:scrollbars="vertical" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_of_16"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/introduc_manual_puncte_castigatoare" />

            <Switch
                android:id="@+id/switch_button_active_puncte_castigatoare_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <com.ionvaranita.belotenote.borders.BorderedEditText
                android:id="@+id/puncte_castigatoare_global_inserimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancel_button_puncte_castigatoare_global_popup"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_of_16"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok_button_puncte_castigatoare_global_popup"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_of_16"
                android:layout_weight="1"
                android:text="@string/ok" />

        </TableRow>
    </TableLayout>


</LinearLayout>
