<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard_linear_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/row"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context="com.ionvaranita.belotenote.KeyboardFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="@dimen/margine_tra_tasti"
                android:id="@+id/key_1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"/>

            <Button
                android:layout_margin="@dimen/margine_tra_tasti"
                android:id="@+id/key_2"
                android:text="2"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/key_3"
                android:text="3"
                android:layout_weight="1"
                android:layout_margin="@dimen/margine_tra_tasti"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/key_4"
                android:text="4"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                />

            <Button
                android:id="@+id/key_5"
                android:text="5"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/key_6"
                android:text="6"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti" />

            <Button
                android:id="@+id/key_7"
                android:text="7"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                />

            <Button
                android:id="@+id/key_8"
                android:text="8"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                />

            <Button
                android:id="@+id/key_9"
                android:text="9"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                />

            <Button
                android:id="@+id/key_0"
                android:text="0"
                android:layout_weight="1"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/key_meno10"
                android:text="@string/meno_10"
                style="@style/AppTheme.Button.Inserisci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                android:layout_weight="1" />

            <Button
                android:id="@+id/key_del"
                style="@style/AppTheme.Button.Inserisci"
                android:text="@string/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                android:layout_weight="1" />

            <Button
                android:id="@+id/key_done"
                style="@style/AppTheme.Button.Inserisci"
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margine_tra_tasti"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

</LinearLayout>
